<resources>
    <string name="app_name">HandiKart</string>
    <string name="select_lang">Choose your language</string>
    <string name="next_main">Next</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="title_activity_seller_login">Register</string>

    <!-- Strings related to login -->

    <string name="register_number">Register Number</string>
    <string name="verify_number">Verify Number With OTP</string>

    <string name="welcome_seller">Welcome, Seller!</string>
    <string name="seller_name">Name: Aakriti Jha</string>
    <string name="seller_email">Email: aakritijha@gmail.com</string>
    <string name="seller_contact">Contact: 9999999999</string>
    <string name="post_ad">Post AD</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reverify_number">RE-VERIFY NUMBER</string>
</resources>
